--- a/2022_MD/code/md_option4_python.ipynb
+++ b/2022_MD/code/md_option4_python.ipynb
@@ -4453,8 +4453,15 @@
    "source": [
     "# To do\n",
     "\n",
-    "* Boxplots grouped by season, plus for grab samples to compare\n",
-    "* Split into different periods: baseflow, snow melt, summer/autumn flow events"
+    "* Double-check summer time vs winter time for both sensors and grab samples\n",
+    "* Use raw Q data downloaded from NVE by me\n",
+    "* Add 2020-2022 FDOM data for Målselva. Correct for any step changes, etc.\n",
+    "* Look into NIVA DOC data from 2020 onwards. What's going on?! Dodgy across all sites/programmes?\n",
+    "* Look further into FDOM corrections (turbidity, and even internal shielding effect of high DOM on FDOM). Ask Benoit D for advice.\n",
+    "* Split into different periods: baseflow, snow melt, summer/autumn flow events. See e.g. SimplyP paper and code for ideas.\n",
+    "* Look at QC relationships with grab samples as well as sensor data? Double-check see similar things.\n",
+    "* For hysteresis, try out this python package:https://pypi.org/project/hysteresis/ (or this R package looks like it could be useful: https://cran.r-project.org/web/packages/hysteresis/vignettes/index.html)\n",
+    "* Calculate fluxes using logCQ relationships. As good as sensor-based estimates?"
    ]
   },
   {
