--- a/2022_FLLINK/code/FLLINK_explore_remote_sensing_vs_instream.ipynb
+++ b/2022_FLLINK/code/FLLINK_explore_remote_sensing_vs_instream.ipynb
@@ -435,7 +435,9 @@
    "cell_type": "code",
    "execution_count": 106,
    "id": "02ce95d3-b942-4ce2-9011-bdbb388528a3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1200,7 +1202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
