Small update to Q data output

--- a/code/get_NVE_data.ipynb
+++ b/code/get_NVE_data.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "id": "b9f8ad9e-7c62-4f98-8ab7-95bba2d82714",
    "metadata": {},
    "outputs": [],
@@ -78,6 +78,7 @@
     "download_date = '2023-10'  # (for file naming): current month and year\n",
     "out_fpath = '../data/discharge/Q_målselvfossen_alldata_%s-resolution_downloaded-%s.csv' % (resolution, download_date)\n",
     "out_fpath_scaled = '../data/discharge/Q_målselva_alldata_%s-resolution_area-scaled_downloaded-%s.csv' % (resolution, download_date)\n",
+    "out_fpath_scaled_loc = '../data/discharge/Q_målselva_%s-mean_area-scaled_2017-2022.csv' % resolution\n",
     "# out_fpath = '../data/discharge/Q_Storelva_alldata_%s-resolution_downloaded-%s.csv' % (resolution, download_date)"
    ]
   },
@@ -491,14 +492,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "ea003091-d07c-4366-89bf-2812ed466a44",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save to csv\n",
     "df.to_csv(out_fpath)\n",
-    "scaled_df.round(5).to_csv(out_fpath_scaled)"
+    "scaled_df.round(5).to_csv(out_fpath_scaled)\n",
+    "scaled_df.round(5).loc['2017':'2022'].to_csv(out_fpath_scaled_loc)"
    ]
   },
   {
