Round data to fix excel import issues

--- a/code/make_river_inputs.ipynb
+++ b/code/make_river_inputs.ipynb
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "6d032ff3-086f-4991-a59a-51d2b02f15a9",
    "metadata": {},
    "outputs": [
@@ -556,7 +556,7 @@
        "Name: Q, Length: 2191, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "e640844d-8eb0-42d7-a9fc-7ab23c29cdfb",
    "metadata": {},
    "outputs": [
@@ -622,10 +622,10 @@
        "      <th>N_Part</th>\n",
        "      <th>TRP</th>\n",
        "      <th>...</th>\n",
+       "      <th>TP</th>\n",
+       "      <th>TDP</th>\n",
        "      <th>PP</th>\n",
        "      <th>SPM</th>\n",
-       "      <th>Temperatur</th>\n",
-       "      <th>Turbiditet</th>\n",
        "      <th>UV-Abs. 254nm</th>\n",
        "      <th>UV-Abs. 285nm</th>\n",
        "      <th>UV-Abs. 365nm</th>\n",
@@ -673,9 +673,9 @@
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
        "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>1.23</td>\n",
-       "      <td>12.5</td>\n",
-       "      <td>0.66</td>\n",
        "      <td>0.036104</td>\n",
        "      <td>0.025428</td>\n",
        "      <td>0.007068</td>\n",
@@ -697,9 +697,9 @@
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>1.15</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>0.40</td>\n",
        "      <td>0.031250</td>\n",
        "      <td>0.021636</td>\n",
        "      <td>0.005804</td>\n",
@@ -721,9 +721,9 @@
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>1.08</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>0.56</td>\n",
        "      <td>0.027486</td>\n",
        "      <td>0.018772</td>\n",
        "      <td>0.004940</td>\n",
@@ -745,9 +745,9 @@
        "      <td>2.0</td>\n",
        "      <td>...</td>\n",
        "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>2.09</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.92</td>\n",
        "      <td>0.046454</td>\n",
        "      <td>0.032772</td>\n",
        "      <td>0.009464</td>\n",
@@ -769,9 +769,9 @@
        "      <td>1.0</td>\n",
        "      <td>...</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>0.94</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.40</td>\n",
        "      <td>0.027240</td>\n",
        "      <td>0.018894</td>\n",
        "      <td>0.004976</td>\n",
@@ -781,7 +781,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 28 columns</p>\n",
+       "<p>5 rows × 26 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -793,34 +793,26 @@
        "2022-11-07   1.90  1.30  0.79           8.32  1.90    9.0   48.0  1.68   \n",
        "2022-12-05   1.96  0.90  0.95           9.63  2.21   10.0   74.0  1.62   \n",
        "\n",
-       "             N_Part  TRP  ...   PP   SPM  Temperatur  Turbiditet  \\\n",
-       "sample_date               ...                                      \n",
-       "2022-08-01    12.70  1.0  ...  3.0  1.23        12.5        0.66   \n",
-       "2022-09-05    18.70  1.0  ...  2.0  1.15         8.0        0.40   \n",
-       "2022-10-03    17.80  1.0  ...  2.0  1.08         3.9        0.56   \n",
-       "2022-11-07    10.20  2.0  ...  3.0  2.09         2.0        0.92   \n",
-       "2022-12-05     6.35  1.0  ...  2.0  0.94         0.0        0.40   \n",
+       "             N_Part  TRP  ...   TP  TDP   PP   SPM  UV-Abs. 254nm  \\\n",
+       "sample_date               ...                                       \n",
+       "2022-08-01    12.70  1.0  ...  3.0  NaN  3.0  1.23       0.036104   \n",
+       "2022-09-05    18.70  1.0  ...  2.0  NaN  2.0  1.15       0.031250   \n",
+       "2022-10-03    17.80  1.0  ...  2.0  NaN  2.0  1.08       0.027486   \n",
+       "2022-11-07    10.20  2.0  ...  3.0  NaN  3.0  2.09       0.046454   \n",
+       "2022-12-05     6.35  1.0  ...  2.0  NaN  2.0  0.94       0.027240   \n",
        "\n",
-       "             UV-Abs. 254nm  UV-Abs. 285nm  UV-Abs. 365nm  UV-Abs. 410nm    pH  \\\n",
-       "sample_date                                                                     \n",
-       "2022-08-01        0.036104       0.025428       0.007068       0.003114  7.63   \n",
-       "2022-09-05        0.031250       0.021636       0.005804       0.002744  7.69   \n",
-       "2022-10-03        0.027486       0.018772       0.004940       0.002280  7.62   \n",
-       "2022-11-07        0.046454       0.032772       0.009464       0.004446  7.68   \n",
-       "2022-12-05        0.027240       0.018894       0.004976       0.002148  7.48   \n",
+       "             UV-Abs. 285nm  UV-Abs. 365nm  UV-Abs. 410nm    pH  grab_sample  \n",
+       "sample_date                                                                  \n",
+       "2022-08-01        0.025428       0.007068       0.003114  7.63         True  \n",
+       "2022-09-05        0.021636       0.005804       0.002744  7.69         True  \n",
+       "2022-10-03        0.018772       0.004940       0.002280  7.62         True  \n",
+       "2022-11-07        0.032772       0.009464       0.004446  7.68         True  \n",
+       "2022-12-05        0.018894       0.004976       0.002148  7.48         True  \n",
        "\n",
-       "             grab_sample  \n",
-       "sample_date               \n",
-       "2022-08-01          True  \n",
-       "2022-09-05          True  \n",
-       "2022-10-03          True  \n",
-       "2022-11-07          True  \n",
-       "2022-12-05          True  \n",
-       "\n",
-       "[5 rows x 28 columns]"
+       "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "2f75cfc5-d6c2-405d-a7c2-361dcd755202",
    "metadata": {
     "tags": []
@@ -916,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "10697a92-0e7d-41a9-8f5b-622729810817",
    "metadata": {},
    "outputs": [],
@@ -939,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "f69b5cac-8722-499d-9b4c-0a5e2b66ec3a",
    "metadata": {},
    "outputs": [
@@ -1007,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "6d23b25d-98fc-4bd5-9ac8-31da9ae26f5f",
    "metadata": {},
    "outputs": [],
@@ -1034,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "e77b58aa-28d6-407b-a600-d12fd1d9023f",
    "metadata": {},
    "outputs": [
@@ -1165,7 +1157,7 @@
        "2020-10-01       False  winter  Not freshet  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1188,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "ab4fa1b8-a8d2-4c93-accc-d6ed5e25929b",
    "metadata": {
     "tags": []
@@ -1665,7 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "id": "5cf9c3a4-cc9d-4919-9aea-b10d9211a0cf",
    "metadata": {
     "tags": []
@@ -1711,11 +1703,11 @@
        "      <th>N_Part</th>\n",
        "      <th>TRP</th>\n",
        "      <th>...</th>\n",
+       "      <th>TOTN</th>\n",
+       "      <th>TP</th>\n",
        "      <th>TDP</th>\n",
        "      <th>PP</th>\n",
        "      <th>SPM</th>\n",
-       "      <th>Temperatur</th>\n",
-       "      <th>Turbiditet</th>\n",
        "      <th>UV-Abs. 254nm</th>\n",
        "      <th>UV-Abs. 285nm</th>\n",
        "      <th>UV-Abs. 365nm</th>\n",
@@ -1761,11 +1753,11 @@
        "      <td>6.700000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>...</td>\n",
+       "      <td>160.000000</td>\n",
+       "      <td>2.000000</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.790000</td>\n",
-       "      <td>0.100000</td>\n",
-       "      <td>0.340000</td>\n",
        "      <td>0.032734</td>\n",
        "      <td>0.022252</td>\n",
        "      <td>0.005926</td>\n",
@@ -1785,11 +1777,11 @@
        "      <td>7.028571</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>...</td>\n",
+       "      <td>159.428571</td>\n",
+       "      <td>2.000000</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.818571</td>\n",
-       "      <td>0.096000</td>\n",
-       "      <td>0.367143</td>\n",
        "      <td>0.032703</td>\n",
        "      <td>0.022182</td>\n",
        "      <td>0.005889</td>\n",
@@ -1809,11 +1801,11 @@
        "      <td>7.357143</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>...</td>\n",
+       "      <td>158.857143</td>\n",
+       "      <td>2.000000</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.847143</td>\n",
-       "      <td>0.092000</td>\n",
-       "      <td>0.394286</td>\n",
        "      <td>0.032673</td>\n",
        "      <td>0.022112</td>\n",
        "      <td>0.005851</td>\n",
@@ -1833,11 +1825,11 @@
        "      <td>7.685714</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>...</td>\n",
+       "      <td>158.285714</td>\n",
+       "      <td>2.000000</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.875714</td>\n",
-       "      <td>0.088000</td>\n",
-       "      <td>0.421429</td>\n",
        "      <td>0.032642</td>\n",
        "      <td>0.022042</td>\n",
        "      <td>0.005814</td>\n",
@@ -1857,11 +1849,11 @@
        "      <td>8.014286</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>...</td>\n",
+       "      <td>157.714286</td>\n",
+       "      <td>2.000000</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.904286</td>\n",
-       "      <td>0.084000</td>\n",
-       "      <td>0.448571</td>\n",
        "      <td>0.032611</td>\n",
        "      <td>0.021972</td>\n",
        "      <td>0.005776</td>\n",
@@ -1905,11 +1897,11 @@
        "      <td>6.900000</td>\n",
        "      <td>1.142857</td>\n",
        "      <td>...</td>\n",
+       "      <td>110.000000</td>\n",
+       "      <td>2.142857</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.142857</td>\n",
        "      <td>1.104286</td>\n",
-       "      <td>0.285714</td>\n",
-       "      <td>0.474286</td>\n",
        "      <td>0.029985</td>\n",
        "      <td>0.020877</td>\n",
        "      <td>0.005617</td>\n",
@@ -1929,11 +1921,11 @@
        "      <td>6.762500</td>\n",
        "      <td>1.107143</td>\n",
        "      <td>...</td>\n",
+       "      <td>110.000000</td>\n",
+       "      <td>2.107143</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.107143</td>\n",
        "      <td>1.063214</td>\n",
-       "      <td>0.214286</td>\n",
-       "      <td>0.455714</td>\n",
        "      <td>0.029299</td>\n",
        "      <td>0.020381</td>\n",
        "      <td>0.005457</td>\n",
@@ -1953,11 +1945,11 @@
        "      <td>6.625000</td>\n",
        "      <td>1.071429</td>\n",
        "      <td>...</td>\n",
+       "      <td>110.000000</td>\n",
+       "      <td>2.071429</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.071429</td>\n",
        "      <td>1.022143</td>\n",
-       "      <td>0.142857</td>\n",
-       "      <td>0.437143</td>\n",
        "      <td>0.028612</td>\n",
        "      <td>0.019885</td>\n",
        "      <td>0.005297</td>\n",
@@ -1977,11 +1969,11 @@
        "      <td>6.487500</td>\n",
        "      <td>1.035714</td>\n",
        "      <td>...</td>\n",
+       "      <td>110.000000</td>\n",
+       "      <td>2.035714</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.035714</td>\n",
        "      <td>0.981071</td>\n",
-       "      <td>0.071429</td>\n",
-       "      <td>0.418571</td>\n",
        "      <td>0.027926</td>\n",
        "      <td>0.019390</td>\n",
        "      <td>0.005136</td>\n",
@@ -2001,11 +1993,11 @@
        "      <td>6.350000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>...</td>\n",
+       "      <td>110.000000</td>\n",
+       "      <td>2.000000</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.000000</td>\n",
        "      <td>0.940000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.400000</td>\n",
        "      <td>0.027240</td>\n",
        "      <td>0.018894</td>\n",
        "      <td>0.004976</td>\n",
@@ -2014,7 +2006,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1758 rows × 27 columns</p>\n",
+       "<p>1758 rows × 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2032,33 +2024,33 @@
        "2022-12-04   1.957857  0.914286  0.944286       9.583214  2.198929   9.964286   \n",
        "2022-12-05   1.960000  0.900000  0.950000       9.630000  2.210000  10.000000   \n",
        "\n",
-       "                 NO3-N        Na    N_Part       TRP  ...  TDP        PP  \\\n",
-       "sample_date                                           ...                  \n",
-       "2018-02-12   72.000000       NaN  6.700000  1.000000  ...  1.0       NaN   \n",
-       "2018-02-13   71.428571       NaN  7.028571  1.000000  ...  1.0       NaN   \n",
-       "2018-02-14   70.857143       NaN  7.357143  1.000000  ...  1.0       NaN   \n",
-       "2018-02-15   70.285714       NaN  7.685714  1.000000  ...  1.0       NaN   \n",
-       "2018-02-16   69.714286       NaN  8.014286  1.000000  ...  1.0       NaN   \n",
-       "...                ...       ...       ...       ...  ...  ...       ...   \n",
-       "2022-12-01   70.285714  1.628571  6.900000  1.142857  ...  1.0  2.142857   \n",
-       "2022-12-02   71.214286  1.626429  6.762500  1.107143  ...  1.0  2.107143   \n",
-       "2022-12-03   72.142857  1.624286  6.625000  1.071429  ...  1.0  2.071429   \n",
-       "2022-12-04   73.071429  1.622143  6.487500  1.035714  ...  1.0  2.035714   \n",
-       "2022-12-05   74.000000  1.620000  6.350000  1.000000  ...  1.0  2.000000   \n",
+       "                 NO3-N        Na    N_Part       TRP  ...        TOTN  \\\n",
+       "sample_date                                           ...               \n",
+       "2018-02-12   72.000000       NaN  6.700000  1.000000  ...  160.000000   \n",
+       "2018-02-13   71.428571       NaN  7.028571  1.000000  ...  159.428571   \n",
+       "2018-02-14   70.857143       NaN  7.357143  1.000000  ...  158.857143   \n",
+       "2018-02-15   70.285714       NaN  7.685714  1.000000  ...  158.285714   \n",
+       "2018-02-16   69.714286       NaN  8.014286  1.000000  ...  157.714286   \n",
+       "...                ...       ...       ...       ...  ...         ...   \n",
+       "2022-12-01   70.285714  1.628571  6.900000  1.142857  ...  110.000000   \n",
+       "2022-12-02   71.214286  1.626429  6.762500  1.107143  ...  110.000000   \n",
+       "2022-12-03   72.142857  1.624286  6.625000  1.071429  ...  110.000000   \n",
+       "2022-12-04   73.071429  1.622143  6.487500  1.035714  ...  110.000000   \n",
+       "2022-12-05   74.000000  1.620000  6.350000  1.000000  ...  110.000000   \n",
        "\n",
-       "                  SPM  Temperatur  Turbiditet  UV-Abs. 254nm  UV-Abs. 285nm  \\\n",
-       "sample_date                                                                   \n",
-       "2018-02-12   0.790000    0.100000    0.340000       0.032734       0.022252   \n",
-       "2018-02-13   0.818571    0.096000    0.367143       0.032703       0.022182   \n",
-       "2018-02-14   0.847143    0.092000    0.394286       0.032673       0.022112   \n",
-       "2018-02-15   0.875714    0.088000    0.421429       0.032642       0.022042   \n",
-       "2018-02-16   0.904286    0.084000    0.448571       0.032611       0.021972   \n",
-       "...               ...         ...         ...            ...            ...   \n",
-       "2022-12-01   1.104286    0.285714    0.474286       0.029985       0.020877   \n",
-       "2022-12-02   1.063214    0.214286    0.455714       0.029299       0.020381   \n",
-       "2022-12-03   1.022143    0.142857    0.437143       0.028612       0.019885   \n",
-       "2022-12-04   0.981071    0.071429    0.418571       0.027926       0.019390   \n",
-       "2022-12-05   0.940000    0.000000    0.400000       0.027240       0.018894   \n",
+       "                   TP  TDP        PP       SPM  UV-Abs. 254nm  UV-Abs. 285nm  \\\n",
+       "sample_date                                                                    \n",
+       "2018-02-12   2.000000  1.0       NaN  0.790000       0.032734       0.022252   \n",
+       "2018-02-13   2.000000  1.0       NaN  0.818571       0.032703       0.022182   \n",
+       "2018-02-14   2.000000  1.0       NaN  0.847143       0.032673       0.022112   \n",
+       "2018-02-15   2.000000  1.0       NaN  0.875714       0.032642       0.022042   \n",
+       "2018-02-16   2.000000  1.0       NaN  0.904286       0.032611       0.021972   \n",
+       "...               ...  ...       ...       ...            ...            ...   \n",
+       "2022-12-01   2.142857  1.0  2.142857  1.104286       0.029985       0.020877   \n",
+       "2022-12-02   2.107143  1.0  2.107143  1.063214       0.029299       0.020381   \n",
+       "2022-12-03   2.071429  1.0  2.071429  1.022143       0.028612       0.019885   \n",
+       "2022-12-04   2.035714  1.0  2.035714  0.981071       0.027926       0.019390   \n",
+       "2022-12-05   2.000000  1.0  2.000000  0.940000       0.027240       0.018894   \n",
        "\n",
        "             UV-Abs. 365nm  UV-Abs. 410nm        pH  \n",
        "sample_date                                          \n",
@@ -2074,10 +2066,10 @@
        "2022-12-04        0.005136       0.002230  7.487143  \n",
        "2022-12-05        0.004976       0.002148  7.480000  \n",
        "\n",
-       "[1758 rows x 27 columns]"
+       "[1758 rows x 25 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
