Save daily sensor data

--- a/code/make_river_inputs.ipynb
+++ b/code/make_river_inputs.ipynb
@@ -489,6 +489,8 @@
     "# Drop time info for joining and plotting\n",
     "sensor_df.index = pd.to_datetime(sensor_df.index).normalize()\n",
     "\n",
+    "sensor_df.to_csv(r'../data/sensor/malselva_sensor_daily_2018-2021.csv')\n",
+    "\n",
     "sensor_df"
    ]
   },
